<resources>
    <string name="app_name">HiAccounts</string>
    <string name="intro_next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="nav_item_hiposretail">Hinext Sales</string>
    <string name="nav_item_hiposrastaurent">Hinext Restaurant</string>
    <string name="nav_item_hipospurchase">Hinext Purchase</string>
    <string name="nav_item_report">Payment Reports</string>
    <string name="nav_item_abouthiaccount">About Us</string>
    <string name="nav_item_help">Help</string>
    <string name="nav_item_contactus">Contact Us</string>
    <string name="nav_item_logout">Logout</string>
    <string name="salesChart">Sales</string>
    <string name="purchaseChart">Purchase</string>
    <string name="navitemDashboard">Dashboard</string>
    <string name="navitemSales">Sales</string>
    <string name="navitemPurchases">Purchases</string>
    <string name="navitemRestaurant">Restaurant</string>
    <string name="navitemService">Service</string>
    <string name="navitemTransaction">General Transaction</string>
    <string name="navitemInventory">Inventory</string>
    <string name="navitemManufacturing">Manufacturing</string>
    <string name="navitemCRM">CRM</string>
    <string name="navitemTax">Tax</string>
    <string name="navitemControlPanel">Control Panel</string>
    <string name="navitemContact">Contact</string>
    <string name="navitemReport">Report</string>
    <string name="navitemHelp">Help</string>
    <string name="navitemLogOut">Log Out</string>
    <string-array name="nav_drawer_labels">
        <item>@string/navitemDashboard</item>
        <item>@string/navitemSales</item>
        <item>@string/navitemPurchases</item>
        <item>@string/navitemTransaction</item>
        <item>@string/navitemInventory</item>
        <item>@string/navitemTax</item>
        <item>@string/navitemControlPanel</item>
        <item>@string/navitemContact</item>
        <item>@string/navitemReport</item>
        <item>@string/navitemHelp</item>
    </string-array>
    <string name="reportPurchase">Purchase</string>
    <string name="reportPurSupplierSalesReport">Supplier Sales Report</string>
    <string name="reportPurReceiveItem">Receive Item Listing</string>
    <string name="reportPurSupplierStatment">Supplier Statement Listing</string>
    <string name="reportPurPO">Purchase Order Listing</string>
    <string name="reportPurSuppliers">Supplier Listing</string>
    <string name="reportPurInvoices">Purchase Invoice Listing</string>
    <string name="reportPurReturn">Purchase Return Listing</string>
    <string name="reportPurSuppPayments">Supplier Payment</string>
    <string name="reportPurCreditors">Creditors Ageing</string>
    <string name="reportPurAdjusment">Purchase Adjustment</string>
    <string name="reportPurCancelledInovices">Cancelled Purchase Invoice</string>
    <string name="reportSales">Sales</string>
    <string name="reportSalesQuotation">Sales Quotation Register</string>
    <string name="reportSalesOrders">Sales Order Register</string>
    <string name="reportSalesOrdersDetails">Sales Order Details Register</string>
    <string name="reportSalesItemCommission">Item Commission Register</string>
    <string name="reportSalesInvoices">Sales Invoice Register</string>
    <string name="reportSalesReturn">Sales Return Register</string>
    <string name="reportSalesDelivery">Product Delivery Register</string>
    <string name="reportSalesCustomerStatement">Customer Statement</string>
    <string name="reportSalesPaymentReport">Payment Report</string>
    <string name="reportSalesPrice">Price Register</string>
    <string name="reportSalesCommissionAging">Commission Aging</string>
    <string name="reportSalesDebtorsAging">Debtors Aging</string>
    <string name="reportSalesCustomers">Customer Register</string>
    <string name="reportSalesAgent">Agent Register</string>
    <string name="reportSalesPatient">Patient Register</string>
    <string name="reportSalesCustomerPayment">Customer Payment</string>
    <string name="reportSalesAdjustment">Sales Adjustment</string>
    <string name="reportSalesCancelledInvoices">Cancelled Sales Inovice</string>
    <string name="reportSRestaurent">Restaurant</string>
    <string name="reportSRestaurentInvoiceRegister">Restaurant Invoice Register</string>
    <string name="reportSRestaurentDayEndRegister">Restaurant DayEnd Register</string>
    <string name="reportSRestaurentItemSales">Item Sales Report</string>
    <string name="reportSRestaurentDayEnd">Day End Report</string>
    <string name="reportSRestaurentMonthEnd">Month End Report</string>
    <string name="reportSRestaurentCancelledItemReports">Cancelled Item Reports</string>
    <string name="reportInventory">Inventory</string>
    <string name="reportInvGRNValuation">GRN Valuation Report</string>
    <string name="reportInvPlanning">Planning Report</string>
    <string name="reportInvValuation">Valuation Report</string>
    <string name="reportInvSales">Sales Report</string>
    <string name="reportInvNonMovement">Non Movement Report</string>
    <string name="reportInvMovement">Movement Report</string>
    <string name="reportInvList">Inventory List</string>
    <string name="reportInvOutstandingGNR">Outstanding GNR Report</string>
    <string name="reportInvStockCheck">Stock Check Report</string>
    <string name="reportInvAppleStock">Apple Stock Check Report</string>
    <string name="reportInvAppleSales">Apple Sales Stock Check Report</string>
    <string name="crmLeads">Leads</string>
    <string name="crmEvent">Event</string>
    <string name="reportAnalysis">Analysis</string>
    <string name="reportAnalysisActBalance">Account Balance</string>
    <string name="reportAnalysisCustomerReciept">Customer Receipt Report</string>
    <string name="reportAnalysisSuppPayment">Supplier Payment Report</string>
    <string name="reportAnalysisIncome">Income Comparison Report</string>
    <string name="reportAnalysisExpense">Expense Comparison Report</string>
    <string name="reportAnalysisCustInvoices">Customer Invoice Payment</string>
    <string name="title_rastarant">Restaurant</string>
    <string name="title_rememberme">Remember Me</string>
    <string name="log_out">Log Out</string>
    <string name="create_pos">Create POS</string>
    <string name="return_item">Return Items</string>
    <string name="invoke_order">Invoke Order</string>
    <string name="clear_invokeorder">Clear Invoke Order</string>
    <string name="services">Service</string>
    <string name="reciept_printing">Reciept Print</string>
    <string name="total_amount">Total</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="customer_name">Customer Name</string>
    <string name="enter_compnay_emial">Enter company email</string>
    <string name="base_url">Enter Base URL</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="buildNo">N build - V.No - 17.1.138</string>
    <string name="forgotPassword">Forgot your password?     </string>
    <string name="formNo">Form No</string>
    <string name="totalRecieved">Total Recieved</string>
    <string name="remainingAmount">Remaining Amount</string>
    <string name="createInvoice">Create Invoice</string>
    <string name="remainingPayment">Remaining Payment</string>
    <string name="supplierName">Supplier Name</string>
    <string name="HeaderAboutHiAcocunt">About Hi Accounts</string>
    <string name="HeaderCompany">Company</string>
    <string name="HeaderVision"><![CDATA[Vision & Mission]]></string>
    <string name="HeaderOutTeam">Our Team</string>
    <string name="AboutHiAcocunt">HI Accounts, an integrated and innovative accounting, billing and inventory software was conceived and designed with Malaysian chartered accountants and GST consultants in year 2014. It was approved by Royal Customs Malaysia Department (RCMD) on February 5th 2016.</string>
    <string name="AboutCompany">myHyva IT Solutions Sdn Bhd, a subsidiary of Hyva IT Solutions Pvt Ltd. was established in Malaysia in 2012.

Hyva IT solutions, a UK based IT solutions company stands tall amongst its peers by offering customers the dynamic combination of design and technology that boosts business with decided economic advancements. The company’s raging success has lead to its expansion to India and the results have only grown manifold thereafter. Hyva IT solutions, India is a venture started in conjunction with a $ 40 million business giant, the Vali Group.A decade long dominance in the global market has ensured the Vali group the respect and loyal customer base it enjoys today.

Founded in 2003 Hyva IT solutions, a privately held company has made inroads into the Indian market backed by a team of stalwarts that have a combined professional experience of more than 43 years in the realm of CRM Software Development. With its aims set on active expansion in the IT and telecom sector in India, Hyva is charging ahead adding more facets to the existing business of CRM Software Development for call centers.Diversifying their existent portfolio of software product development with added services that include IT Infrastructure Management and a host of other exclusive IT Software Services.At Hyva we base our service model on the IT Infrastructure Library (ITIL) best practices operating via an established and proven framework that offers customers the distinct advantage of customized and cutting edge technology that adds value to their workspaces in a cost effective and timely manner. It is no wonder then that in the span of three years we have successfully serviced over 25 established customers across the European market and extended our services to over 700 satisfied users worldwide.

Our 70 people strong team strives to understand the specifics of the customers’ enterprise and study the challenges of the business in the rapidly changing business environment. An onsite resource model coupled with a keen approach ensures we deliver high quality solutions that are ideal and specific to the customer in question. Hyva offers software development services that can greatly improve the course of customer business and prides itself in offering solutions that are exact in defining and satisfying every customer’s customized needs. With a finger on the pulse of IT market we are aware of the most asked-for services and choose only the proven and well-operating amongst them. Tested methodologies, innovative processes and a host of global resources ensure the latest in technology ensuring quick ramp ups and turn around results that are useful for outsourced services and tech-support management.

At Hyva the focus is on acting on every possible lead to serve customers better. Our diversified section of services offers a varied range of customers the solutions to their every need. And to achieve the goals we have set for ourselves we have enlisted the help of employees that are certified by the best in the business. At Hyva IT solutions, we understand the importance of trust and business ethics to achieve mutual and stable ongoing growth. Every customer we approach, we do so, on the assumption of a long-term relationship, and fuel our individual services to our customers with the desire to develop and foster a long lasting and mutually beneficial relationship.</string>
    <string name="AboutVision">At Hyva we strive to deliver a compelling experience to our customers through proactive and innovative processes that generate new and greater revenue opportunities and simultaneously offer cost efficient resolutions leading to a definitive edge in the market.</string>
    <string name="fabinvokedraft">Invoke Draft</string>
    <string name="fabsavedraft">Save Draft</string>
    <string name="fabprintlist">Print List</string>
    <string name="fabcleardraft">Clear Draft</string>
</resources>