<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Fragment_Sales">
    <item
        android:id="@+id/delete_items"
        android:icon="@drawable/ic_delete_white"
        android:title=""
        app:showAsAction="always"/>
    <item
        android:id="@+id/id_notification"
        android:title=""
        app:actionLayout="@layout/badge_counter"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/fab_clearall"
        android:title=""
        app:showAsAction="always" />


    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_setting"
        android:title=""
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menuPrintList"
        android:title="@string/fabprintlist"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuSaveDraft"
        android:title="@string/fabsavedraft"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuInvokeDraft"
        android:title="@string/fabinvokedraft"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuClearDraft"
        android:title="@string/fabcleardraft"
        android:visible="false"
        app:showAsAction="never" />
<!--
    <item
        android:id="@+id/changeCompany"
        app:showAsAction="collapseActionView"
        android:title="Settings" />
    <item
        android:id="@+id/logout"
        app:showAsAction="collapseActionView"
        android:title="Log out" />-->
</menu>
