<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_searchitem"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="5">

            <TextView
                android:id="@+id/tvFormNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/formNo"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/tvSupplierName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/supplierName"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/tvTotalAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/total_amount"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/tvRemainingAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/remainingAmount"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/tvCreateInvoice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/createInvoice"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>