<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingmargin">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_searchitem"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tvFormNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/tvpadding"
                android:text="@string/formNo"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/tvCustomerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/tvpadding"
                android:text="@string/customer_name"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/tvTotalRecieved"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/tvpadding"
                android:text="@string/totalRecieved"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/tvRemainingAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/tvpadding"
                android:text="@string/remainingAmount"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/component_height"
            android:layout_below="@+id/ll"
            android:layout_margin="@dimen/layoutmargin"
            android:visibility="gone">


            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/component_height"
                android:layout_toLeftOf="@+id/imageviewReturn">


                <Button
                    android:id="@+id/btnCreateInvoice"
                    android:layout_width="@dimen/ed_width"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/paddingmargin"
                    android:singleLine="true"
                    android:text="@string/createInvoice"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnRemainingPayment"

                    android:layout_width="@dimen/ed_width"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/paddingmargin"
                    android:singleLine="true"
                    android:text="@string/remainingPayment"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone" />
            </RelativeLayout>


            <ImageView

                android:id="@+id/imageviewReturn"
                android:layout_width="@dimen/nav_groupicon_width"
                android:layout_height="@dimen/nav_groupicon_heigth"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/layoutmargin"

                android:src="@drawable/ic_returned"
                android:visibility="gone" />


        </RelativeLayout>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/components_margintop" />

</LinearLayout>